kubernetes/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
  labels:
    app: devops-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      containers:
      - name: devops-api
        image: 565895652873.dkr.ecr.us-east-1.amazonaws.com/url-app:11c86401074c62416a5a4cd9d511a53c3d09051e
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
