kubernetes/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api
spec:
  selector:
    app.kubernetes.io/name: devops-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
