kubernetes/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api  
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jahirulmadethisinaws.online
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jahirulmadethisinaws.online
    secretName: eks-tls-cert
  rules:
  - host: jahirulmadethisinaws.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-api
            port:
              number: 8000
